facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__tuple_struct_with_serialize_with.snap
---
source: facet-macros-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        struct Wrapper(\n            #[facet(opaque, serialize_with = to_u64)]\n            NotDerivingFacet,\n        );\n        \"#)"
---
static WRAPPER_SHAPE: &'static ::facet::Shape = <Wrapper as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for Wrapper {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [{
                ::facet::Field::builder()
                    .name("0")
                    .shape(|| ::facet::shape_of_opaque(&|s: &Wrapper| &s.0))
                    .offset(::core::mem::offset_of!(Wrapper, 0))
                    .attributes(
                        &const {
                            [::facet::FieldAttribute::SerializeInto(
                                ::facet::shape_of_serialize_with_target(&to_u64),
                            )]
                        },
                    )
                    .vtable(
                        &const {
                            ::facet::FieldVTable::builder()
                                .serialize_with(|sptr, tptr| -> Result<::facet::PtrMut<'_>, _> {
                                    let sval: &NotDerivingFacet =
                                        unsafe { sptr.get::<NotDerivingFacet>() };
                                    let res: Result<_, _> = to_u64(sval);
                                    let tval = res.map_err(|e| format!("{e}"))?;
                                    Ok(unsafe { tptr.put(tval) })
                                })
                                .build()
                        },
                    )
                    .build()
            }]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .vtable({
                let mut vtable =
                    ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
                        f, "Wrapper"
                    ));
                vtable
            })
            .type_identifier("Wrapper")
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::default())
                    .kind(::facet::StructKind::TupleStruct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
